Fixed the image page not showing correctly as well as added crispy forms/boostrap to the payment card page.

--- a/advanced_booking/movies/static/movies/main.css
+++ b/advanced_booking/movies/static/movies/main.css
@@ -227,3 +227,17 @@ li a:hover {
   .box:hover::after {
     opacity: 1;
   }
+
+   * {
+            margin: 0;
+            padding: 0;
+        }
+        .imgbox {
+            display: grid;
+            height: 100%;
+        }
+        .center-fit {
+            max-width: 100%;
+            max-height: 100vh;
+            margin: auto;
+        }
